Bug 227458. Make scrollports without scrollbars NOT use a native widget; they probably won't be scrolled anyway. r+sr=bz,a=dbaron